--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,15 +27,13 @@
             <div class="jumbotron">
                 <h1 class="display-4">Friend Finder</h1>
                 <hr class="my-4">
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to
-                    featured content or information.</p>
+                <p class="lead"></p>
 
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.
-                </p>
-                <p class="lead">
-                    <a class="btn btn-info btn-lg" href="/survey" role="button">Go to Survey</a>
-                </p>
+                <p></p>
+
+                <button class="btn btn-info btn-lg"><a href="/survey" class="btn btn-info btn-md">Take the
+                        Survey</a></button>
+
             </div>
         </div>
 
