--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,11 +27,12 @@
             <div class="jumbotron">
                 <h1 class="display-4">Friend Finder</h1>
                 <hr class="my-4">
-                <p class="lead"></p>
+                <p class="lead">Find your match for a new best friend, just fill out the survey!</p>
 
                 <p></p>
 
-                <button class="btn btn-info btn-lg"><a href="/survey" class="btn btn-info btn-md">Take the
+                <button class="btn btn-info btn-lg text-white"><a href="/survey"
+                        class="text-white text-decoration-none">Take the
                         Survey</a></button>
 
             </div>
